updated: visual adjusts and correction on mobile version

--- a/css/master.css
+++ b/css/master.css
@@ -33,6 +33,14 @@
 #frame4 {
   padding-top: 20px;
   padding-bottom: 20px;
+  z-index: 11;
+}
+#frame1,
+#frame2,
+#frame3,
+#frame4 {
+    position: sticky;
+    top: 0;
 }
 
 #menu,
@@ -68,7 +76,7 @@
 
 #frame1 {
   color: white;
-  position: relative;
+  /* position: relative; */
   width: 100vw;
   height: 90vh;
   overflow: hidden;
@@ -92,7 +100,8 @@
   width: 45%;
   border-left: 2px solid white;
   margin-left: 10px;
-  padding: 10px;
+  padding: 10px 10px 10px 25px;
+
   font-size: 1.3rem;
 }
 #frame1 > .image {
@@ -120,6 +129,7 @@
   height: 70vh;
   color: rgb(2, 0, 36);
   text-align: center;
+  background-color: white;
 }
 #frame2 > .container {
   display: flex;
@@ -164,7 +174,7 @@
   #frame2 > .container {
     flex-direction: column-reverse;
     width: 100%;
-    padding: 0;
+    padding: 15px;
   }
 
   #frame2 > .container > .text {
@@ -247,20 +257,20 @@
     height: fit-content;
   }
 
-  .skills > ul > li {
+  #frame3 > .container> .skills > ul > li {
     align-items: flex-start;
     flex-direction: column;
   }
 
-  .skills {
+  #frame3 > .container> .skills {
     width: 100%;
   }
-  .skills > ul > li > h5 {
+  #frame3 > .container> .skills > ul > li > h5 {
     width: 100%;
     margin-bottom: 5px;
   }
 
-  .skills > ul > li > .progress {
+  #frame3 > .container> .skills > ul > li > .progress {
     width: 100%;
   }
 }
@@ -296,13 +306,52 @@
   color: black;
   transition: all 0.3s;
 }
+
 #frame4 > .container > .content > .item > video {
   width: 100%;
 }
+
 #frame4 > .container > .content > .item:hover {
   width: 500px;
   transition: all 0.3s;
 }
+
+@media only screen and (max-width: 700px) {
+    #frame4{
+        height: auto;
+    }
+
+    #frame4 > .container{
+        height: auto;
+
+    }
+
+    #frame4 > .container > .content{
+        flex-direction: column;
+        height: auto;
+    }
+
+    #frame4 > .container > .content .item{
+        margin-bottom: 10px;
+    }
+
+    #frame4 > .container > .content > .item {
+        width: 90%;
+        transition: none;
+    }
+
+    #frame4 > .container > .content > .item:hover {
+        width: 90%;
+        transition: none;
+    }
+
+    #frame1, #frame2, #frame3,#frame4{
+        position: relative;
+    }
+}
+
+
+
 video::-webkit-media-controls {
   display: none !important;
 }
